Do nothing in vt_upgrade if there is no driver

Previously we would panic with "vtbuf_fill_locked begin.tp_row 0 must
be < screen height 0".

PR:		192248
MFC After:	1 week
Sponsored by:	DARPA, AFRL